- modify MarkDown post : 오타 수정

--- a/_posts/2019-05-15-MarkDown.md
+++ b/_posts/2019-05-15-MarkDown.md
@@ -1,11 +1,11 @@
 ---
 layout: post
-title: 마크다운 테그
+title: MarkDown 태그
 date:   2019-05-15 10:00:00
 categories: others
 ---
 
-# MarkDown 태그 리스트
+# MarkDown 태그
 ## Header 표현
 ---
 * `<h1> ~ <h6>` 까지 표현
