--- a/_posts/2019-10-02-baekjoon-1920.md
+++ b/_posts/2019-10-02-baekjoon-1920.md
@@ -7,6 +7,7 @@ comments: true
 ---
 
 ### 문제
+
 문제 링크 : 이분탐색-수 찾기 <https://www.acmicpc.net/problem/1920>
 
 ![이분탐색 수 찾기 문제](/img/algorithm/beakjoon_1920.GIF)
@@ -16,6 +17,13 @@ comments: true
 - 이 문제를 풀기 전에 이분탐색에 대해서 알아보자.
 
     - 이분 탐색 설명 : <https://parkhyeokjin.github.io/algorithm/2019/10/01/binarySearchAlgorithm.html>
+
+- 이 문제는 이분 탐색을 알면 쉽게 풀 수 있다.
+
+    - 숫자들의 집합 (aLen)
+    - 찾아야 되는 숫자의 집합 (bLen)
+    - 이분탐색은 정렬되어있는 배열 에서 찾는 탐색 방법으로 aLen을 오름 차순으로 정렬한다.
+    - bLen 의 숫자를 하나씩 가져와 이분탐색으로 숫자들의 집합(aLen) 에서 존재 유무를 찾는다.
 
 ### 소스
 
