- fix 이미지 사이즈

--- a/_posts/2019-10-02-baekjoon-1920.md
+++ b/_posts/2019-10-02-baekjoon-1920.md
@@ -10,7 +10,7 @@ comments: true
 
 문제 링크 : 이분탐색-수 찾기 <https://www.acmicpc.net/problem/1920>
 
-![이분탐색 수 찾기 문제](/img/algorithm/beakjoon_1920.GIF)
+![이분탐색 수 찾기 문제](/img/algorithm/beakjoon_1920.GIF){: width="80%" height="80%"}
 
 ### 풀이
 
