--- a/_posts/2019-10-10-baekjoon-1654.md
+++ b/_posts/2019-10-10-baekjoon-1654.md
@@ -9,7 +9,7 @@ comments: true
 ### 문제
 문제 링크 : 이분탐색-랜선 자르기 <https://www.acmicpc.net/problem/1654>
 
-![이분탐색 랜선 자르기 문제](/img/algorithm/baekjoon_1654.GIF)
+![이분탐색 랜선 자르기 문제](/img/algorithm/baekjoon_1654.GIF){: width="90%" height="90%"}
 
 ### 풀이
 
