- fix image size

--- a/_posts/2019-10-06-baekjoon-10816.md
+++ b/_posts/2019-10-06-baekjoon-10816.md
@@ -9,7 +9,7 @@ comments: true
 ### 문제
 문제 링크 : 이분탐색-숫자 카드2 <https://www.acmicpc.net/problem/10816>
 
-![이분탐색 숫자 카드2 문제](/img/algorithm/baekjoon_10816.GIF)
+![이분탐색 숫자 카드2 문제](/img/algorithm/baekjoon_10816.GIF){: width="100%" height="100%"}
 
 ### 풀이
 
