--- a/_posts/2019-10-11-baekjoon-2805.md
+++ b/_posts/2019-10-11-baekjoon-2805.md
@@ -9,7 +9,7 @@ comments: true
 ### 문제
 문제 링크 : 이분탐색-나무 자르기 <https://www.acmicpc.net/problem/2805>
 
-![이분탐색 나무 자르기 문제](/img/algorithm/baekjoon_2805.GIF)
+![이분탐색 나무 자르기 문제](/img/algorithm/baekjoon_2805.GIF){: width="100%" height="100%"}
 
 ### 풀이
 
