--- a/_posts/2019-10-13-baekjoon-2110.md
+++ b/_posts/2019-10-13-baekjoon-2110.md
@@ -9,7 +9,7 @@ comments: true
 ### 문제
 문제 링크 : 이분탐색-공유기 설치 <https://www.acmicpc.net/problem/2110>
 
-![이분탐색 공유기 설치 문제](/img/algorithm/baekjoon_2110.GIF)
+![이분탐색 공유기 설치 문제](/img/algorithm/baekjoon_2110.GIF){: width="100%" height="100%"}
 
 ### 풀이
 
