--- a/_posts/2019-10-18-JPA-chap1.md
+++ b/_posts/2019-10-18-JPA-chap1.md
@@ -22,7 +22,7 @@ comments: true
             - /h2db/bin/h2.bat(sh) 를 실행
             - https://localhost:8082 로 접속하여 아래와 같은 화면이 나오면 된다.
         
-            ![h2 db console](/img/jpa/h2db.png)
+            ![h2 db console](/img/jpa/h2db.png){: width="80%" height="80%"}
 
 ### Maven 프로젝트 생성
 
@@ -76,7 +76,7 @@ comments: true
     )
     ```
     
-    ![h2 db console](/img/jpa/h2db-tablecreate.png)
+    ![h2 db console](/img/jpa/h2db-tablecreate.png){: width="80%" height="80%"}
     
 - JPA 설정 정보 persistence.xml 작성
 
