--- a/_posts/2019-10-21-baekjoon-1992.md
+++ b/_posts/2019-10-21-baekjoon-1992.md
@@ -10,7 +10,7 @@ comments: true
 
 문제 링크 : <https://www.acmicpc.net/problem/1992>
 
-![쿼드 트리](/img/algorithm/baekjoon_1992.png)
+![쿼드 트리](/img/algorithm/baekjoon_1992.png){: width="100%" height="100%"}
 
 ### 풀이
 
