--- a/_posts/2019-10-15-baekjoon-1300.md
+++ b/_posts/2019-10-15-baekjoon-1300.md
@@ -9,7 +9,7 @@ comments: true
 ### 문제
 문제 링크 : 이분탐색-K번째 수 <https://www.acmicpc.net/problem/1300>
 
-![이분탐색 K번째 수 문제](/img/algorithm/baekjoon_1300.png)
+![이분탐색 K번째 수 문제](/img/algorithm/baekjoon_1300.png){: width="100%" height="100%"}
 
 ### 풀이
 
