--- a/_posts/JPA/2019-10-27-JPA-chap4.md
+++ b/_posts/JPA/2019-10-27-JPA-chap4.md
@@ -11,7 +11,7 @@ comments: true
 
 이번시간 에는 JPA 연관관계 매핑의 상속관계 매핑 전략 대해서 정리 해보도록 하겠습니다.
 
-- @Inheritance : JPA 연관관계 매핑의 상속 관계에서 전략을 지정하는 어노테이션이다.
+- @Inheritance : JPA 연관관계 매핑의 상속 관계에서 전략을 지정하는 어노테이션입니다..
 
     - @Inheritance 전략 옵션 정보
 
@@ -282,7 +282,7 @@ _단일 테이블_
     ![단일 테이블 전략 데이터](/img/jpa/JPA-CHAP4-3.PNG){: width=100% height=100% }  
     _단일 테이블_
 
-- 단일 테이블 전략은 조인이 없기 때문에 속도가 빠른 장점이 있지만 컬럼에 NULL 을 허용 해야 하고 컬럼이 많아지는 단점이 있다.
+- 단일 테이블 전략은 조인이 없기 때문에 속도가 빠른 장점이 있지만 컬럼에 NULL 을 허용 해야 하고 컬럼이 많아지는 단점이 있습니다.
 
 ### 클래스별 테이블 전략(TABLE_PER_CLASS)
 
@@ -315,7 +315,7 @@ _단일 테이블_
         )
     ```
   
-    - 각자의 테이블이 생성된 것을 볼수 있다. 
+    - 각자의 테이블이 생성된 것을 볼수 있습니다. 
     
 - 테이블 전략 데이터 입력 수행 로그
 
@@ -338,7 +338,7 @@ _단일 테이블_
                 (?, ?, ?)
     ```
     
-    - 각자의 테이블이 생성 되었다.
+    - 각자의 테이블이 생성 되었습니다.
     
 - 테이블 전략 조회
 
@@ -373,11 +373,11 @@ _단일 테이블_
         shop0_.seq=?
     ```
   
-    - 로그에서 확인 할 수 있듯이 테이블을 union으로 조회 하기 때문에 성능이 느리고 자식들을 관리 하기가 어렵기 때문에 추천 하지 않는 전략이다.
+    - 로그에서 확인 할 수 있듯이 테이블을 union으로 조회 하기 때문에 성능이 느리고 자식들을 관리 하기가 어렵기 때문에 추천 하지 않는 전략입니다.
     
 ### @MappedSuperclass
 
-- @MappedSuperclass 는 부모클래스를 상속 받는 자식 클래스에 매핑 정보만 제공하는 어노테이션이다.
+- @MappedSuperclass 는 부모클래스를 상속 받는 자식 클래스에 매핑 정보만 제공하는 어노테이션입니다.
 
 - 부모 클래스
     
@@ -397,7 +397,7 @@ _단일 테이블_
     }
     ``` 
   
-  - 부모 클래스에 @Entity 대신 @MappedSuperclass 어노테이션으로 수정 한다.
+  - 부모 클래스에 @Entity 대신 @MappedSuperclass 어노테이션으로 수정 합니다.
   
 - 자식 클래스
 
@@ -430,8 +430,8 @@ _단일 테이블_
     }
     ```
   
-    - @AttributeOverride : 부모 엔티티에서 상속 받은 필드의 이름을 재정의 할때 사용 된다.  
-    - @AttributeOverrides : 어노테이션을 이용해서 여러개의 필드 이름을 재정의 할 수 있다.
+    - @AttributeOverride : 부모 엔티티에서 상속 받은 필드의 이름을 재정의 할때 사용됩니다.  
+    - @AttributeOverrides : 어노테이션을 이용해서 여러개의 필드 이름을 재정의 할 수 있습니다.
   
 - 테이블 생성 수행 로그
 
@@ -452,7 +452,7 @@ _단일 테이블_
         )
     ```
 
-    - 부모테이블과 매핑되지 않은 테이블이 생성 되었고 부모 클래스의 필드를 상속 받았다. 
+    - 부모테이블과 매핑되지 않은 테이블이 생성 되었고 부모 클래스의 필드를 상속 받았습니다. 
 
 - 데이터 입력 수행 로그
 
