- add JPA 복합키매핑

--- a/_posts/JPA/2019-10-28-JPA-chap5.md
+++ b/_posts/JPA/2019-10-28-JPA-chap5.md
@@ -20,7 +20,7 @@ comments: true
     ![식별관계 구조](/img/jpa/JPA-CHAP5-1.PNG){: width=100% height=100% }
     
     식별관계 매핑은 부모테이블의 키를 자식테이블이 내려 받아서 기본키 + 외래키 형태로 사용 하는 매핑 방식 입니다.  
-    부모의 키가 자식 테이블로 상속 되면서 테이블의 키가 많아지는 단점이 있고 유연하지 못하기 때문에 꼭 필요 한곳에서만 사용 되고 있습니다.
+    부모의 키가 자식 테이블로 상속 되면서 테이블의 키가 많아지는 단점이 있고 유연하지 못하기 때문에 꼭 필요 한 곳에서만 사용 되고 있습니다.
     
  
 - 비식별관계   
@@ -28,7 +28,7 @@ comments: true
     ![비식별관계 구조](/img/jpa/JPA-CHAP5-2.PNG){: width=100% height=100% }
 
     비식별관계 매핑은 부모 테이블의 기본키를 자식 테이블의 외래키로만 사용 하는 매핑 방식 입니다.  
-    비식별관계는 Null을 허용하는 <B>선택적 비식별관계</B> 과 Null을 허용 하지 않는 <B>필수적 비식별관계</B>로 나누어 집니다.  
+    비식별관계는 NULL을 허용하는 <B>선택적 비식별관계</B> 과 NULL을 허용 하지 않는 <B>필수적 비식별관계</B>로 나누어 집니다.  
 
 ## 복합키 매핑 하기
 
