- typo 알고리즘풀이(AC)

--- a/_posts/algorithm/2019-11-05-baekjoon-5430.md
+++ b/_posts/algorithm/2019-11-05-baekjoon-5430.md
@@ -11,7 +11,7 @@ comments: true
 
 문제 링크 : <https://www.acmicpc.net/problem/5430>
 
-![프린터 큐 문제](/img/algorithm/baekjoon_5430.png){: width="100%" height="100%"}
+![AC 문제](/img/algorithm/baekjoon_5430.png){: width="100%" height="100%"}
 
 ### 풀이
 
@@ -23,7 +23,7 @@ comments: true
 
 ### 소스
 
-- 프린터 큐(1966)
+- AC(5430)
 
 ```java
 import java.io.BufferedReader;
