- typo 영속성 전이

--- a/_posts/JPA/2019-11-06-JPA-chap8.md
+++ b/_posts/JPA/2019-11-06-JPA-chap8.md
@@ -115,7 +115,7 @@ em.remove(teacher);
 em.remove(member);
 ```
 
-@ManyToOne(cascade = CascadeType.DELETE) 옵션을 설정 하면 부모를 삭제 하면 연관된 자식도 삭제가 됩니다.
+@ManyToOne(cascade = CascadeType.REMOVE) 옵션을 설정 하면 부모를 삭제 하면 연관된 자식도 삭제가 됩니다.
 
 ```java
 Member member = em.find(Member.class, "1");
