그래프 알고리즘 - 유니온파인드

--- a/_posts/algorithm/2023-11-22-graph-chap2.md
+++ b/_posts/algorithm/2023-11-22-graph-chap2.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: 그래프 알고리즘 연습(노드를 배열로 만들기)
+title: 그래프 알고리즘 기초 - 유니온 파인드
 date:   2023-11-22 10:00:00
 categories: Algorithm
 category : Algorithm
