--- a/_posts/algorithm/2023-11-22-graph-chap1.md
+++ b/_posts/algorithm/2023-11-22-graph-chap1.md
@@ -30,21 +30,21 @@ comments: true
 1. 에지 리스트 중심으로 표현하는 방법
 
 - 그래프 제시 유형
-  - 노드의 시작(S) 과 종료(E) 가 주어지며 가중치(V) 가 있는경우 2차원 배열로 변환
+  > 노드의 시작(S) 과 종료(E) 가 주어지며 가중치(V) 가 있는경우 2차원 배열로 변환
 
 - 입력 값
-```text
-6
-1 2 5
-1 3 4
-3 4 3
-2 4 2
-2 5 1
-4 5 9
-```
+  ```text
+  6
+  1 2 5
+  1 3 4
+  3 4 3
+  2 4 2
+  2 5 1
+  4 5 9
+  ```
 
 - 변환 하기
-```java
+  ```java
     @Test
     void 그래프변환(){
         int[][] graph = new int[6][2];  // 가중치가 있는 경우 new int[6][3]
@@ -60,125 +60,125 @@ comments: true
             System.out.println(Arrays.toString(g));
         }
     }
-```
+  ```
 
 2. 인접 행렬로 그래프 표현 하는 방법
 
 - 그래프 제시 유형
-  - 2차원 배열을 이용해서 표현하며 노드 중심으로 표현 하며 X 가 출발(S) 노드 Y 가 도착(E) 노드를 표현 한다.
+    > 2차원 배열을 이용해서 표현하며 노드 중심으로 표현 하며 X 가 출발(S) 노드 Y 가 도착(E) 노드를 표현 한다.
 
 1) 인접 행렬 그래프 표현 방법
 
 - 입력 값
-```text
-6
-1 2
-1 3
-3 4
-2 4
-2 5
-4 5
-```
+  ```text
+  6
+  1 2
+  1 3
+  3 4
+  2 4
+  2 5
+  4 5
+  ```
 
 - 변환 하기
 
-```java
-@Test
-void 그래프변환(){
-int[][] graph = new int[6][6];  // N x N 배열을 만든다.
-
-        //   [S][E]  [간선 표기] - 가중치가 있는경우 가중치를 간선 표기에 값으로 넣는다.
-        graph[1][2] = 1;
-        graph[1][3] = 1;
-        graph[3][4] = 1;
-        graph[2][4] = 1;
-        graph[2][5] = 1;
-        graph[4][5] = 1;
-
-        for(int[] g : graph){
-            System.out.println(Arrays.toString(g));
-        }
-    }
-```
+  ```java
+  @Test
+  void 그래프변환(){
+  int[][] graph = new int[6][6];  // N x N 배열을 만든다.
+  
+          //   [S][E]  [간선 표기] - 가중치가 있는경우 가중치를 간선 표기에 값으로 넣는다.
+          graph[1][2] = 1;
+          graph[1][3] = 1;
+          graph[3][4] = 1;
+          graph[2][4] = 1;
+          graph[2][5] = 1;
+          graph[4][5] = 1;
+  
+          for(int[] g : graph){
+              System.out.println(Arrays.toString(g));
+          }
+      }
+  ```
 
 3. 인접 리스트(ArrayList)로 그래프 표현 방법
 
 - 그래프 제시 유형
-  - ArrayList 를 사용하여 그래프 관계를 표현하는 방법으로 가장 많이 활용하는 방법. 시작(S) 노드를 List의 Index 로 사용 하고
+  > ArrayList 를 사용하여 그래프 관계를 표현하는 방법으로 가장 많이 활용하는 방법. 시작(S) 노드를 List의 Index 로 사용 하고
     연결된 노드를 List.add(E) 하는 방법. 구현은 어렵지만 인덱스를 시작 노드로 이용하여 탐색이 매우 빠르다. 인접행렬과 다르게
     빈공간이 없기 때문에 메모리에 이점이 있다.
 
 1) 인접 리스트형 그래프 표현 방법
 
 - 입력 값
-```text
-6
-1 2
-1 3
-3 4
-2 4
-2 5
-4 5
-```
+  ```text
+  6
+  1 2
+  1 3
+  3 4
+  2 4
+  2 5
+  4 5
+  ```
 
 - 변환 하기(가중치가 없는 경우)
 
-```java
-    @Test
-    void 그래프변환(){
+  ```java
+  @Test
+  void 그래프변환(){
 
-        List<Integer>[] graph = new ArrayList[6+1];  // 6개의 인덱스를 가진 리스트를 만든다.(인덱스는 0 부터 시작하기 때문에 N + 1)
-        for(int i = 0; i <= 6; i++){
-            graph[i] = new ArrayList<>(); // 초기화
-        }
+      List<Integer>[] graph = new ArrayList[6+1];  // 6개의 인덱스를 가진 리스트를 만든다.(인덱스는 0 부터 시작하기 때문에 N + 1)
+      for(int i = 0; i <= 6; i++){
+          graph[i] = new ArrayList<>(); // 초기화
+      }
 
-        graph[1].add(2); graph[1].add(3);
-        graph[2].add(4); graph[2].add(5);
-        graph[3].add(4);
-        graph[4].add(5);
+      graph[1].add(2); graph[1].add(3);
+      graph[2].add(4); graph[2].add(5);
+      graph[3].add(4);
+      graph[4].add(5);
 
-        for(List<Integer> g : graph){
-            System.out.println(g);
-        }
-    }
-```
+      for(List<Integer> g : graph){
+          System.out.println(g);
+      }
+  }
+  ```
 
 - 변환 하기(가중치가 있는 경우)
 
-```java
-    @Test
-    void 그래프변환(){
-        List<Node>[] graph = new ArrayList[6+1];  // 6개의 인덱스를 가진 리스트를 만든다.(인덱스는 0 부터 시작하기 때문에 N + 1)
-        for(int i = 0; i <= 6; i++){
-            graph[i] = new ArrayList<>(); // 초기화
-        }
+  ```java
+  @Test
+  void 그래프변환(){
+      List<Node>[] graph = new ArrayList[6+1];  // 6개의 인덱스를 가진 리스트를 만든다.(인덱스는 0 부터 시작하기 때문에 N + 1)
+      for(int i = 0; i <= 6; i++){
+          graph[i] = new ArrayList<>(); // 초기화
+      }
 
-        //   [S]                  [E]      [V]
-        graph[1].add(new Node(2, 5));
-        graph[1].add(new Node(3, 4));
-        graph[2].add(new Node(4, 2));
-        graph[2].add(new Node(5, 1));
-        graph[3].add(new Node(4, 3));
-        graph[4].add(new Node(5, 9));
+      //   [S]                  [E]      [V]
+      graph[1].add(new Node(2, 5));
+      graph[1].add(new Node(3, 4));
+      graph[2].add(new Node(4, 2));
+      graph[2].add(new Node(5, 1));
+      graph[3].add(new Node(4, 3));
+      graph[4].add(new Node(5, 9));
 
-        for(List<Node> n : graph){
-            System.out.println(n.toString());
-        }
-    }
-    
-    // Node 클래스를 이용하여 List 에 가중치와 함께 저장한다.
-    public class Node{
-        private int end;
-        private int value;
+      for(List<Node> n : graph){
+          System.out.println(n.toString());
+      }
+  }
+  
+  // Node 클래스를 이용하여 List 에 가중치와 함께 저장한다.
+  public class Node{
+      private int end;
+      private int value;
 
-        public Node(int end, int value){
-            this.end = end;
-            this.value = value;
-        }
+      public Node(int end, int value){
+          this.end = end;
+          this.value = value;
+      }
 
-        @Override
-        public String toString(){
-            return "end : " + end + " " + "value : " + value;
-        }
-    }
-```
+      @Override
+      public String toString(){
+          return "end : " + end + " " + "value : " + value;
+      }
+  }
+  ```
