--- a/_posts/algorithm/2023-11-22-graph-chap1.md
+++ b/_posts/algorithm/2023-11-22-graph-chap1.md
@@ -18,10 +18,10 @@ comments: true
     - 문제 유형 : 사이클이 없고. 방향이 있는 그래프에서만 사용할 수 있으며 전후 관계가 필요한 알고리즘(수강 신청 등등)
   - 다익스트라 알고리즘(Dijkstra)
     - 문제 유형 : 최단 거리 알고리즘. 시작 노드(S) 에서 목적지(E)로 가는 최단거리 탐색에 이용됨. (음수 간선 불가)
-  - 플로이드 워셜 알고리즘(Floyd-Warshall)
-    - 문제 유형 : 다익스트라 알고리즘과 동일한 유형이나 가중치에 음수 간선이 있는 경우 이용됨.
   - 벨만포드 알고리즘(Bellman-Ford)
-    - 문제 유형 : 플로이드 워셜 알고리즘 과 동일한 유형이나 주로 음수 사이클이 있는지 확인 하는 유형에서 이용됨.
+      - 문제 유형 : 다익스트라 알고리즘과 동일하게 최단거리를 구할 수 있는 알고리즘 이지만 음수 간선도 사용이 가능함.
+  - 플로이드 워셜 알고리즘(Floyd-Warshall)
+      - 문제 유형 : 벨만포드 알고리즘과 동일한 음수간선을 포함한 최단거리에 활용되는 알고리즘이지만 동적계획법(DP-Memorise) 을 활용함.
   - 최소 신장 트리(MST : Minimum Spanning Tree)
     - 문제 유형 : 모든 노드를 연결 할때 최소의 비용을 구할 수 잇는 알고리즘. 유니온파인드를 활용해서 사이클을 없엠.
 
