플로이드 워셜 알고리즘(Floyd-Warshall)

--- a/_posts/algorithm/2023-11-22-graph-chap5.md
+++ b/_posts/algorithm/2023-11-22-graph-chap5.md
@@ -11,18 +11,17 @@ comments: true
 
 #### 벨만포드 알고리즘(Bellman-Ford)
 
-- 다익스트라 알고리즘과 동일하게 최단거리를 구할 수 있는 알고리즘 이지만 __음수 간선__ 도 사용이 가능하다. 주로 음수간선의 여부확인에 활용.
+- 다익스트라 알고리즘과 동일하게 최단거리를 구할 수 있는 알고리즘 이지만 __음수 간선__ 도 사용이 가능하다. 주로 음수 간선의 여부 확인에 활용.
 - 참고사항
   - 시간복잡도(노드수 : v, 에지 수 : E) : O(VE)
-  - 음수 가중치가 있는경우 사용 할 수 없음. 음수 가중치가 있는 경우 벨만포드 알고리즘(Bellman-Ford) 을 사용.
-  - 업데이트 조건 : D[s] != ∞ && D[e] > D[s] + w 일때 D[s] + w 값으로 리스트 값을 업데이트 함.
+  - 음수 가중치가 있는 경우 에도 사용 할 수 있음.
+  - 업데이트 조건 : D[s] != ∞ && D[e] > D[s] + w 일때 D[s] + w 값으로 리스트 값을 UPDATE 함.
 - 알고리즘 활용 영역
   - 백준 11657 - 타임머신 <https://www.acmicpc.net/problem/11657>
 
 #### 벨만포드 구현 코드(백준-타임머신)
 
   ```java
- public class BJ_11657 {
   /**
    N개의 도시가 있다. 그리고 한 도시에서 출발하여 다른 도시에 도착하는 버스가 M개 있다. 
    각 버스는 A, B, C로 나타낼 수 있는데, A는 시작도시, B는 도착도시, C는 버스를 타고 이동하는데 걸리는 시간이다. 시간 C가 양수가 아닌 경우가 있다. 
