--- a/_posts/algorithm/2023-11-22-graph-chap6.md
+++ b/_posts/algorithm/2023-11-22-graph-chap6.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: 그래프 알고리즘 기초 - 벨만포드 알고리즘(Bellman-Ford)
+title: 그래프 알고리즘 기초 - 플로이드 워셜 알고리즘(Floyd-Warshall)
 date:   2023-11-22 10:00:00
 categories: Algorithm
 category : Algorithm
