--- a/_posts/algorithm/2023-11-22-graph-chap6.md
+++ b/_posts/algorithm/2023-11-22-graph-chap6.md
@@ -27,7 +27,7 @@ comments: true
 
 #### 플로이드 워셜 알고리즘(백준-경로 찾기)
 
-![graph2](/img/algorithm/Floyd-Warshall2.png)
+![graph2](/img/algorithm/Floyd-Warshall2.png){: width=100% height=100% }
 
   ```java
   public class BJ_11403 {
