--- a/_posts/algorithm/2023-12-11-graph-chap7.md
+++ b/_posts/algorithm/2023-12-11-graph-chap7.md
@@ -7,17 +7,20 @@ category : Algorithm
 comments: true 
 ---
 
-### 그래프 알고리즘 기초 - 최소 신장 트리(Minimum Spanning Tree)
+## 그래프 알고리즘 기초 - 최소 신장 트리(Minimum Spanning Tree)
 
-#### 최소 신장 트리(Minimum Spanning Tree)
+---
+
+### 최소 신장 트리란? (Minimum Spanning Tree)
 
 - 최소신장 트리는 모든 정점을 포함하면서 가장 적은 비용으로 연결된 부분 그래프를 찾는 알고리즘.
 - 프림 알고리즘과 크루스칼 알고리즘이 있음.
   - 둘의 차이점은 프림 알고리즘은 복잡한 밀집 그래프에 적합하고 크루스칼 알고리즘은 간선이 적은 희소 그래프에 적합하다.
 
-#### 최소 신장 트리(프림 알고리즘)
+### 최소 신장 트리(프림 알고리즘)
 
-프림 알고리즘은 한 정점에서 시작하여 현재 선택된 정점의 집합에서 가장 가까운 정점을 선택하고, 해당 정점과 연결된 간선 중에서 최소 가중치 간선을 선택하는 방식으로 동작합니다.
+프림 알고리즘은 한 정점에서 시작하여 현재 선택된 정점의 집합에서 가장 가까운 정점을 선택하고,  
+해당 정점과 연결된 간선 중에서 최소 가중치 간선을 선택하는 방식으로 동작합니다.  
 
 
   ```java
@@ -88,7 +91,9 @@ comments: true
   }
   ```
 
-#### 최소 신장 트리(크루스칼 알고리즘)
+---
+
+### 최소 신장 트리(크루스칼 알고리즘)  
 
 크루스칼 알고리즘은 모든 간선을 가중치의 오름차순으로 정렬한 뒤, 가중치가 가장 작은 간선부터 차례대로 선택하여 사이클을 형성하지 않는 경우에만 해당 간선을 최소 신장 트리에 추가하는 방식으로 동작합니다.
 
