modify 프로그래머스 도넛과 막대그래프

--- a/_posts/algorithm/2024-01-07-PG_258711.md
+++ b/_posts/algorithm/2024-01-07-PG_258711.md
@@ -47,22 +47,22 @@ public class PG_258711 {
             if(!graph.containsKey(giveNum)) graph.put(giveNum, new Edge(0, 0));
             if(!graph.containsKey(receiveNum)) graph.put(receiveNum, new Edge(0, 0));
 
-            graph.get(giveNum).giveNum++;
-            graph.get(receiveNum).receiveNum++;
+            graph.get(giveNum).giveCount++;
+            graph.get(receiveNum).receiveCount++;
         }
 
         for(int i = 1; i <= maxNum; i++){
-            int giveCount = graph.get(i).giveNum;
-            int receiveCount = graph.get(i).receiveNum;
+            int giveCount = graph.get(i).giveCount;
+            int receiveCount = graph.get(i).receiveCount;
 
-            if(receiveCount == 0 && giveCount >= 2){
-                //정점
+            if(giveCount >= 2 && receiveCount == 0){
+                //정점 : 받는 간선이 2개 이상 이고 나가는 간선이 없다(0)
                 answer[0] = i;
-            }else if(graph.get(i).giveNum == 0){
-                //막대
+            }else if(graph.get(i).giveCount == 0){
+                //막대 : 받는 간선이 없이 나가는 간선만 있음.
                 answer[2]++;
-            }else if(graph.get(i).receiveNum >= 2 && graph.get(i).giveNum >= 2){
-                //8자
+            }else if(graph.get(i).giveCount >= 2 && graph.get(i).receiveCount >= 2){
+                //8자 : 받고 나가는 간선이 2개 이상 이어야 한다.
                 answer[3]++;
             }
 
@@ -73,18 +73,18 @@ public class PG_258711 {
     }
 
     public class Edge {
-        private int giveNum;
-        private int receiveNum;
-        public Edge(int giveNum, int receiveNum) {
-            this.giveNum = giveNum;
-            this.receiveNum = receiveNum;
+        private int giveCount;
+        private int receiveCount;
+        public Edge(int giveCount, int receiveCount) {
+            this.giveCount = giveCount;
+            this.receiveCount = receiveCount;
         }
 
         @Override
         public String toString() {
             return "Edge{" +
-                    "giveNum=" + giveNum +
-                    ", receiveNum=" + receiveNum +
+                    "giveCount=" + giveCount +
+                    ", receiveCount=" + receiveCount +
                     '}';
         }
     }
