modify 프로그래머스 도넛과 막대그래프

--- a/_posts/algorithm/2024-01-07-PG_258711.md
+++ b/_posts/algorithm/2024-01-07-PG_258711.md
@@ -17,12 +17,17 @@ comments: true
 
 ---
 
-### 규칙
+### 문제 해결 접근법
 
-1. 정점 : 정점은 나가는 간선만 있고 받는 간선은 없음.
-2. 막대 : 막대는 받는 간선은 없음.
-3. 8자 : 나가는 간선이 2개 이상 이고 받는 간선도 2개 이상임.
-4. 도넛 : 도넛은 정점의 간선에서 2(막대수),3(8자수) 을 제외한 (정점 - 막대 - 8자) 나머지.
+문제를 해결하기 위한 접근 방법은 다음과 같습니다.
+
+- 그래프 생성: 주어진 간선 정보를 바탕으로 그래프를 생성합니다. 정점은 나가는 간선만 있고 받는 간선은 없습니다. 각 정점의 나가는 간선 수와 받는 간선 수를 세어서 저장합니다.
+
+- 정점, 막대, 8자 구분, 도넛
+  - 정점은 받는 간선이 2개 이상이고 나가는 간선이 없는 경우입니다. 
+  - 막대는 받는 간선이 없는 경우입니다.  
+  - 8자는 나가는 간선이 2개 이상이고 받는 간선도 2개 이상인 경우입니다.
+  - 나머지 경우는 도넛입니다. 도넛의 경우 정점의 간선에서 막대 수와 8자 수를 제외한 나머지입니다.
 
 ---
 
@@ -90,3 +95,15 @@ public class PG_258711 {
     }
 }
 ```
+
+### 코드 설명
+그래프 생성: graph 맵을 사용하여 정점의 나가는 간선 수(giveCount)와 받는 간선 수(receiveCount)를 저장합니다.  
+
+정점, 막대, 8자 구분: 그래프를 순회하면서 정점, 막대, 8자를 찾습니다.  
+
+도넛 찾기: 나머지 경우는 도넛으로 판별하고, 도넛의 경우 정점의 간선에서 막대 수와 8자 수를 제외한 나머지입니다.  
+
+### 마무리
+이러한 방식으로 주어진 그래프에서 정점, 막대, 8자, 도넛을 찾는 문제를 해결할 수 있습니다.  
+주어진 규칙을 이해하고 그에 맞게 간선 수를 세어 나가는 것이 핵심입니다. 코드는 각 정점에 대한 간선 수를 계산하고,  
+그에 따라 정점, 막대, 8자, 도넛을 판별하여 결과를 반환합니다.
