--- a/_posts/algorithm/2024-01-24-PG_169199.md
+++ b/_posts/algorithm/2024-01-24-PG_169199.md
@@ -9,6 +9,8 @@ comments: true
 
 ## 프로그래머스 - 리코쳇 게임(Java)
 
+문제 링크 : [리코쳇 게임](https://school.programmers.co.kr/learn/courses/30/lessons/169199)
+
 리코쳇 게임 이란?
 
 리코쳇 게임은 1999년에 Alex Randolph가 디자인 한 추상 전략 보드 게임 입니다.  
