--- a/_posts/algorithm/2024-01-23-PG_178870.md
+++ b/_posts/algorithm/2024-01-23-PG_178870.md
@@ -9,7 +9,7 @@ comments: true
 
 ## 프로그래머스 - 연속된 부분 수열의 합(Java)
 
-문제 링크 : ![부분 수열의 합](https://school.programmers.co.kr/learn/courses/30/lessons/178870)
+문제 링크 : [부분 수열의 합](https://school.programmers.co.kr/learn/courses/30/lessons/178870)
 
 이번 문제는 연속된 수열(sequence) 에서 부분 수열의 합이 k 가 되는 연속된 부분 수열을 찾는 문에 입니다.
 
